<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Route Taiwan</string>
    <string name="plan_route">Plan Route</string>
    <string name="show_map">Map</string>
    <string name="my_favorite">Saved Routes</string>
    <string name="fav_points">Favorite Points</string>
    <string name="version">Version</string>
    
    <string name="locale">English</string>
    <string name="language_settings">Language</string>
    <string name="showmap2">Map</string>
    <string name="pos_from"><i>Current position</i></string>
    <string name="pos_to"><i>Taipei 101</i></string>
    <string name="str_from">From</string>
    <string name="str_to">To</string>
    <string name="str_time">ETD</string>
    <string name="go">Go</string>
    <string name="transit">Transit</string>
    <string name="walkto">Walk to&#160;</string>
    <string name="taketransit">Take&#160;</string>
    <string name="taketransit_bus">Take bus&#160;</string>
    <string name="taketransit_mrt">Take MRT&#160;</string>
    <string name="go_to">bound for&#160;</string>
    <string name="dirction"></string>
    <string name="stops">&#160;stops</string>
    <string name="hour">&#160;hour&#160;</string>
    <string name="minute">&#160;min</string>
    <string name="to">to&#160;</string>
    <string name="no_service">No service</string>
    <string name="exit_stop">Alighting stop</string>
    <string name="exit_station">Alighting station</string>
    <string name="warning_no_loc_provider">Please enable GPS or WiFi for positioning</string>
    <string name="info_network_using">Network Service: </string>
    <string name="info_positioning_by_gps">GPS positioning, please wait</string>
    <string name="info_gps_fixed">GPS position fixed!</string>
    <string name="info_positioning_by_network">WiFi positioning, please wait</string>
    <string name="info_no_result">No search results</string>
    <string name="info_internal_error">Interal error</string>
    <string name="info_illegal_num">Please enter phone-number</string>
    <string name="info_illegal_titlename">Illegal charater \",\"</string>
    <string name="sms_sent">SMS successfully sent!</string>
    <string name="sms_received">Localization SMS received!</string>
    <string name="notice">NOTICE</string>
    <string name="no_remind">Don\'t remind me again</string>
    <string name="info_sms_sending">Will send SMS, SMS charges may apply</string>
    <string name="info_planroute_edit">Address/Place/Favorite point</string>
    <string name="info_showmap_edit">Address/Place</string>
    <string name="common_bus">Bus</string>
    <string name="common_mrt">Subway/MRT</string>
    <string name="trtc">TRTC</string>
    <string name="krtc">KRTC</string>
    <string name="hsr">THSR</string>
    <string name="tra">TRA</string>
    <string name="add_to_departure">Dept.</string>
    <string name="add_to_arrival">Arr.</string>
    <string name="send_friend">Send</string>
    <string name="save_result">Save</string>
    <string name="cancel_result">Clear</string>
    <string name="edit_title">Title Name</string>
    <string name="goto_planroute">Plan Route</string>
    <string name="sendfrom">from&#160;</string>
    <string name="name_or_number">Enter phone-number</string>
    <string name="instruction">You can set departure/arrival position or send desired position to your friend by long-press the map.</string>
    <string name="plan_route_instruction">Click for each item for detail information.\nLong press will save the result.</string>
    <string name="understand">OK</string>
    <string name="diag_saving">Save this route?</string>
    <string name="diag_delete">Delete this item?</string>
    <string name="saved">Succefully saved.</string>
    <string name="saved_to_fav">Saved to Favorite Points</string>
    <string name="diag_yes">Yes</string>
    <string name="diag_no">No</string>
    <string name="file_already_existed">Route already existed.</string>
    <string name="realtime_under_construction">Under construction</string>
    <string name="realtime_info">Realtime Info</string>
    <string name="arriving">Arriving</string>
    <string name="almost_arriving">1 min</string>
    <string name="hsr_status">HSR Service</string>
    <string name="hsr_normal">On Schedule</string>
    <string name="hsr_warning">Delayed</string>
    <string name="network_issue">Network unstable</string>
    <string name="time_table">Time Table</string>
    <string name="estimate">&#160;ETD</string>
    <string name="departure_time"></string>
    <string name="arrival_time">Arrival Time</string>
    <string name="trival_time">Duration</string>
    <string name="train_id">ID</string>
    <string name="no_data">No results!</string>
    <string name="no_loc_provider">WiFi/GPS positioning required</string>
    <string name="no_loc_provider_msg">Press "OK" to Settings</string>
    <string name="no_network">No Internet</string>
    <string name="error">Error</string>
    <string name="not_in_tw">The results are not in Taiwan</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="search_google">Search</string>

    <string name="provide_by_tra">Source: Taiwan Railway Administration</string>
    <string name="provide_by_5284">Source: www.5284.com.tw</string>
    <string name="provide_by_khh">Source: Kaohsiung City Gov.</string>
    <string name="provide_by_txg">Source: Taichung City Gov.</string>
    <string name="provide_by_tyn">Source: Taoyuang County Gov.</string>
    <string name="provide_by_bus">Source: Directorate General of Highways</string>
    <string name="provide_by_thsr">Source: THSR</string>
    <string name="error_find_start_dest">Cannot mark dept./arr. stops!</string>
    
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="choose_line">Choose a line</string>
    <string name="carrier">Carrier</string>
    
    <string name="fav_pt_hint">Favorite Points hint</string>
    <string name="details">Detail</string>
    <string name="no_service_today">No service today</string>
    
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    
    <string name="ferry">ferry</string>
    <string name="current_status">Current Status</string>
    <string name="on_time">On time</string>
    <string name="delay">Delay</string>
    <string name="station">Station</string>
    <string name="train_arr_time">Arrive</string>
    <string name="train_dep_time">Depart</string>
    
    <string name="train_type">Type</string>
    
    <string name="TC">T.C.</string>
    <string name="CK">C.K.</string>
    <string name="Local">Local</string>
    <string name="Localfast">Local</string>
    <string name="duration">Dur.</string>
    
    <string name="pickdate">Date</string>
    <string name="picktime">Time</string>
    <string name="colon">：</string>
    
    <string name="search">Start search</string>
    <string name="trainstation">station</string>
    <string name="normalstation">station</string>
    <string name="str_hsr">HSR</string>
    <string name="mrt">MRT</string>

    <string-array name="country_arrays">
        <item>繁體中文</item>
        <item>简体中文</item>
        <item>English</item>
    </string-array>

    <item name="tag_zero" type="id"></item>
    <item name="tag_first" type="id"></item>
    <item name="tag_second" type="id"></item>

</resources>