<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     
    <EditText
        android:id="@+id/point_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_title"
        android:inputType="textPostalAddress"
        android:textColorHint="#c3c3c3" />
    
    <!-- Editext for Search -->

    <EditText
        android:id="@+id/inputSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_or_number"
        android:inputType="textPostalAddress"
        android:textColorHint="#c3c3c3" />
  
    <!-- List View -->
    <ListView
        android:id="@+id/all_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#CCC"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:onClick="start_sending"
                android:text="@string/diag_yes" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:onClick="cancel"
                android:text="@string/diag_no" />

        </TableRow>
    </TableLayout>
  
</LinearLayout>