<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#800C0C0C"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#CCC"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="vertical" >

            <Button
                android:id="@+id/add_to_departure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_to_departure" />

            <Button
                android:id="@+id/add_to_arrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_to_arrival" />
<!-- For PAD  -->
<!--
            <Button
                android:id="@+id/send_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/send_friend" />
-->
            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save_result" />

            <Button
                android:id="@+id/close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cancel_result" />
        </TableRow>
    </TableLayout>

</LinearLayout>